--- a/action.yml
+++ b/action.yml
@@ -29,6 +29,9 @@ outputs:
   output:
     description: 'The output of PyInstaller'
 
+- uses: actions/setup-python@v4
+  with:
+    python-version: '3.11' 
 runs:
   using: 'docker'
   image: 'Dockerfile'
