--- a/action.yml
+++ b/action.yml
@@ -29,15 +29,15 @@ outputs:
   output:
     description: 'The output of PyInstaller'
 
-- uses: actions/setup-python@v4
+uses: actions/setup-python@v4
   with:
     python-version: '3.11' 
-runs:
-  using: 'docker'
-  image: 'Dockerfile'
-  args:
-    - ${{ inputs.path }}
-    - ${{ inputs.pypi_url }}
-    - ${{ inputs.pypi_index_url }}
-    - ${{ inputs.spec }}
-    - ${{ inputs.requirements }}
+    runs:
+      using: 'docker'
+      image: 'Dockerfile'
+      args:
+        - ${{ inputs.path }}
+        - ${{ inputs.pypi_url }}
+        - ${{ inputs.pypi_index_url }}
+        - ${{ inputs.spec }}
+        - ${{ inputs.requirements }}
